[gd_scene load_steps=15 format=3 uid="uid://ykfmiw1btmik"]

[ext_resource type="Script" path="res://characters/player/player_lvl2.gd" id="1_uopwu"]
[ext_resource type="Texture2D" uid="uid://bklu3lkw1jhan" path="res://assets/texture/entities/player/explosion.png" id="2_1xamv"]
[ext_resource type="Texture2D" uid="uid://c4v7581hxd4nu" path="res://assets/texture/entities/player/matze.jpg" id="3_f66cn"]
[ext_resource type="AudioStream" uid="uid://dr8jkbabmm6dn" path="res://assets/audio/effects/Fart with reverb sound effect.mp3" id="4_hf0wr"]
[ext_resource type="AudioStream" uid="uid://calqr2q1kswhl" path="res://assets/audio/effects/ROBLOX Oof Sound Effect.mp3" id="5_h1fwm"]
[ext_resource type="Texture2D" uid="uid://drnvb38txucyw" path="res://assets/texture/entities/player/band-aid.png" id="5_maoad"]
[ext_resource type="PackedScene" uid="uid://22prdpwmkx8a" path="res://level/pause_screen/pause.tscn" id="7_b0ibx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dlg1r"]
size = Vector2(21.5, 5.8)

[sub_resource type="Animation" id="Animation_p0ose"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1xamv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("explosion:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("explosion:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("explosion:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y2wfu"]
resource_name = "attack"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1xamv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("explosion:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("explosion:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("explosion:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("attack_area:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.55),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pwffw"]
_data = {
"RESET": SubResource("Animation_p0ose"),
"attack": SubResource("Animation_y2wfu")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_8crpp"]
radius = 32.0

[sub_resource type="LabelSettings" id="LabelSettings_2d2v0"]
font_size = 23
font_color = Color(0, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yhaio"]
font_size = 23
font_color = Color(0, 1, 1, 1)

[node name="player_lvl2" type="CharacterBody2D"]
script = ExtResource("1_uopwu")

[node name="explosion" type="Sprite2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(2, 2)
texture = ExtResource("2_1xamv")
hframes = 25

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.015, 0.015)
texture = ExtResource("3_f66cn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.9)
shape = SubResource("RectangleShape2D_dlg1r")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -2)
zoom = Vector2(4, 4)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pwffw")
}

[node name="attack_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
shape = SubResource("CircleShape2D_8crpp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="info_enemy" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 21.0
offset_top = 19.0
offset_right = 263.0
offset_bottom = 54.0
text = "Every enemy kills you.

Enemies will start to attack you
as soon as their path has been opened.

Every enemy takes 3 hits to kill."
label_settings = SubResource("LabelSettings_2d2v0")

[node name="info_player" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 822.0
offset_top = 21.0
offset_right = 1131.0
offset_bottom = 161.0
text = "[W], [A], [S], [D] to move.
[Space] to attack.
[Shift] to turn upside-down.

You can survive up to 5 hits."
label_settings = SubResource("LabelSettings_yhaio")
horizontal_alignment = 2

[node name="audio" type="Node" parent="."]

[node name="attack_sound" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("4_hf0wr")
max_polyphony = 3

[node name="damage_taken" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("5_h1fwm")
volume_db = 24.0
max_polyphony = 3

[node name="can_take_damage_timer" type="Timer" parent="."]
one_shot = true

[node name="band_aid1" type="Sprite2D" parent="."]
visible = false
position = Vector2(-6, -7)
scale = Vector2(0.0119531, 0.0119531)
texture = ExtResource("5_maoad")

[node name="band_aid2" type="Sprite2D" parent="."]
visible = false
position = Vector2(6, 3)
scale = Vector2(0.01, 0.01)
texture = ExtResource("5_maoad")

[node name="band_aid3" type="Sprite2D" parent="."]
visible = false
position = Vector2(8, -10)
scale = Vector2(0.01, 0.01)
texture = ExtResource("5_maoad")

[node name="band_aid4" type="Sprite2D" parent="."]
visible = false
position = Vector2(-5, 6)
scale = Vector2(0.01, 0.01)
texture = ExtResource("5_maoad")

[node name="band_aid5" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -7)
scale = Vector2(0.01, 0.01)
texture = ExtResource("5_maoad")

[node name="pause" parent="." instance=ExtResource("7_b0ibx")]
process_mode = 2

[connection signal="game_pause" from="." to="pause" method="_on_player_lvl_2_game_pause"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="can_take_damage_timer" to="." method="_on_can_take_damage_timer_timeout"]
